# roco-map-web

./: .circle_state.json  .cnb.yml  .env  .gitignore  README.md  config.py  main_web.py  optimization_report.md  package-lock.json  package.json  path_config.py  pyproject.toml  requirements.txt  run_sift.py  run_web.py  test_batch.py  tracker_core.py  tracker_engines.py
.cnb/: web_trigger.yml
.ide/: Dockerfile
algorithm/: compare_arrow_icon.py  detect_arrow.py  minimap_batch_audit.py  minimap_scale_robustness_test.py  minimap_stress_test.py  visualize_arrow_errors.py
assets/: feature_cache_sat.npz
assets/map_data/: categories.json  rocom_markers_detail.json
backend/: config.py  frontend_build.py  map_data.py  server.py  sift_app.py  store.py  tracker_core.py  tracker_engines.py
backend/common/: __init__.py
backend/core/: cold_start.py  config_runtime.py  context.py  data_standards.py  ecc.py  enhance.py  fastjson.py  features.py  flow.py  hash_index.py  icon_mask.py  recognize_single_fallback.py  temporal_bridge.py
backend/map/: __init__.py  arrow.py  autodetect.py  icon_tracker.py  minimap.py  minimap_runtime.py
backend/map_builder/: download_map.py  draw_markers.py  fetch_markers.py  rocom_markers.json  verify_markers.py
backend/push/: manager.py  session.py
backend/tracking/: autodetect.py  direction.py  minimap.py  smoother.py
backend/transport/: __init__.py
backend/vision/: __init__.py
backend/web/: __init__.py
frontend/: bigmap.html  map.html  recognize.html  settings.html
frontend/css/: common.css  map.css  recognize.css  settings.css
frontend/js/: common.js  map-markers.js  map-route.js  map.js  range-optimizer.js  recognize-audience.js  recognize-renderer-fullmap.js  recognize.js  (+7 more)
map_builder/: __main__.py  _regen_lite.py  build_arrow_templates.py  download_map.py  draw_markers.py  fetch_categories.py  fetch_markers.py  menu.py  rocom_markers.json  rocom_markers_lite.json  verify_markers.py
picture2/: ITERATION_REPORT_v2.md  MATCHER_V2_SUMMARY.md  QUICK_TROUBLESHOOTING.md  debug_candidates.py  diagnose_icons.py  extract_bigmap.py  extract_icons.py  icon_displacement_tracker.py  icon_matcher_v2.py  matcher_config.py
routes/: 1商店街魔力之源.json  1示例跑图路线.json  bandao.json  bidedadao.json  caopi.json  gangkou.json  haitan.json  jianyu.json  mofazhijia.json  shandi.json  wangguochengbao.json  xiangyahua.json  xueshan.json  zhaoze.json  城区长线矿点.json  山地_by道临沂 4.11.json  沼泽_by道临沂 4.11.json  矿石1.json  矿石2.json  矿石3.json  矿石4.json  雪山_by道临沂 4.11.json
tests/: test_connection_modes.py
tools/: build-frontend.mjs
web/: bigmap.html  index.html
(+65 files in other folders)
